💄 style: update style

--- a/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
@@ -29,7 +29,7 @@
     <div class="d-flex justify-space-between flex-wrap">
         @foreach (var item in Achievements)
         {
-            <MCard Class="my-5 achievement-card"
+            <MCard Class="mb-5 my-sm-5 py-sm-3 achievement-card"
                    Elevation="0"
                    Rounded="@("lg")"
                    Ripple="false">
