💄 style: update style

--- a/SwashbucklerDiary/Pages/Mine/Settings/AlertPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/AlertPage.razor
@@ -10,8 +10,7 @@
     <MSubheader>
        @(I18n.T("Alert.AlertTimeout"))：@(timeout / 1000) s
     </MSubheader>
-    <MContainer Class="ma-0 py-0"
-                Style="max-width:600px;">
+    <MContainer Class="ma-0 py-0">
         <MSlider Value="timeout"
                  ValueChanged="UpdateAlertTimeout"
                  TValue="int"
