--- a/SwashbucklerDiary/Pages/Mine/Settings/ImageSettingPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/ImageSettingPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/image"
+﻿@page "/imageSetting"
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
@@ -12,7 +12,7 @@
     </MButton>
 
     <MToolbarTitle Class="font-weight-bold">
-        @(I18n.T("Setting.Diary.Image.Name"))
+        @(I18n.T("Setting.Display.Diary.Image.Name"))
     </MToolbarTitle>
     <MSpacer></MSpacer>
     <MButton Icon="true"
@@ -29,6 +29,6 @@
 
 <DeleteDialog @bind-Value="ShowConfimDelete"
               Title="@(I18n.T("Share.Delete"))"
-              Content="@(I18n.T("Setting.Diary.Image.DeleteUnusedImage"))"
+              Content="@(I18n.T("Setting.Display.Diary.Image.DeleteUnusedImage"))"
               OnOK="DeleteUnusedImageResource">
 </DeleteDialog>
