--- a/SwashbucklerDiary/Pages/Mine/Settings/LocationSettingPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/LocationSettingPage.razor
@@ -1,8 +1,8 @@
-﻿@page "/location"
+﻿@page "/locationSetting"
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.Diary.Location.Name"))"
+<MyAppBar Title="@(I18n.T("Setting.Display.Diary.Location.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
