--- a/SwashbucklerDiary/_Imports.razor
+++ b/SwashbucklerDiary/_Imports.razor
@@ -4,9 +4,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Masa.Blazor
+@using BlazorComponent
 @using SwashbucklerDiary
 @using SwashbucklerDiary.Shared
 @using SwashbucklerDiary.Extend
-@using Masa.Blazor
-@using BlazorComponent
+@using SwashbucklerDiary.Models
 @using SwashbucklerDiary.Components
