♻️ refactor(LAN): Optimize logic and fix bugs

--- a/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANReceiver.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANReceiver.razor
@@ -28,7 +28,7 @@
 
 </ScrollContainer>
 
-<LANTransferDialog @bind-Value="Transferring"
+<LANTransferDialog @bind-Value="ShowTransferDialog"
                    Title="@(I18n.T("lanReceiver.Receiving"))"
                    Ps="Ps"
                    BytesReceived="BytesReceived"
