--- a/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANSender.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LANTransfer/LANSender.razor
@@ -82,7 +82,7 @@
     </MCard>
 </ScrollContainer>
 
-<LANTransferDialog @bind-Value="Transferring"
+<LANTransferDialog @bind-Value="ShowTransferDialog"
                    Title="@(I18n.T("lanSender.Sending"))"
                    Ps="Ps"
                    BytesReceived="BytesReceived"
